# my_safe_tools

./: Cargo.toml  LICENSE
core/crates/git-hack/: Cargo.toml
core/crates/git-hack/src/: lib.rs  main.rs  tests.rs
core/crates/remote-git-dump/: Cargo.toml  todolist
core/crates/remote-git-dump/src/: example.rs  lib.rs
core/traits/: Cargo.toml
core/traits/src/: lib.rs
git-hack-cli/: Cargo.toml
git-hack-cli/src/: main.rs
gui-slint/: Cargo.toml
gui-slint/src/: global_log.rs  main.rs
gui-slint/ui/: main-layout.slint  main.slint
gui-slint/ui/components/: side-bar.slint
