[workspace.dependencies]
remote-git-dump = { path = "core/crates/remote-git-dump" }
traits = { path = "core/traits" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
rstest = "0.25.0"
tokio = "1.45.1"
thiserror = "2.0.12"
url = "2.5.4"
console = "0.15.11"
dialoguer = "0.11.0"
indicatif = "0.17"
clap = "4.5.40"

[workspace]
members = [
    "core/traits",
    "core/crates/remote-git-dump", "git-hack-cli",
]
resolver = "3"

[profile.release]
debug = false
strip = true
lto = true
opt-level = "z"
codegen-units = 1
