[workspace.dependencies]
remote-git-dump = { path = "core/crates/remote-git-dump" }
traits = { path = "core/traits" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
rstest = "0.26"
tokio = "1.45.1"
thiserror = "2.0.12"
url = "2.5.4"
console = "0.16"
dialoguer = "0.12.0"
indicatif = "0.18"
clap = "4.5.40"
cxx = "1.0"
cxx-build = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[workspace]
members = [
    "core/traits",
    "core/crates/remote-git-dump",
    "git-hack-cli",
    "ffi/remote-git-dump",
]
resolver = "3"

[profile.release]
debug = false
strip = true
lto = true
opt-level = "z"
codegen-units = 1
