[package]
name = "git-hack-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }
traits = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
clap = { workspace = true, features = ["derive"] }
git-hack = { workspace = true }