[package]
name = "remote-git-dump"
description = "dump git repository files from website"
authors = ["秃头灯笼鱼 <ttdlyu@163.com>"]
version = "0.1.0"
edition = "2024"


[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
serde = { workspace = true }


gix-index = { version = "0.40.1", features = ["document-features"] }
gix-object = { version = "0.49.1", features = ["document-features"] }
gix-config = { version = "0.45.1", features = ["document-features"] }
reqwest = { version = "0.12.20", features = ["blocking"] }
flate2 = { version = "1.1.2", features = ["zlib"] }
bytes = "1.10.1"


[dev-dependencies]
rstest = { workspace = true }